--- a/backend/test.html
+++ b/backend/test.html
@@ -9,6 +9,7 @@
   <body>
     <h1>Edit Post</h1>
     <form action="update" method="post">
+      <input type="hidden" name="" id="inputMessageID" value="" />
       <p>What did you do yesterday?</p>
       <textarea id="inputYesterday" rows="6" cols="70"></textarea>
       <!-- <input type="text" name="yesterday_name" id="input_yesterday" /> -->
