--- a/backend/test.html
+++ b/backend/test.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <h1>Edit Post</h1>
-    <form action="update" method="post">
+    <form action="http://http://127.0.0.1:8000/update" method="patch">
       <input type="hidden" name="" id="inputMessageID" value="" />
       <p>What did you do yesterday?</p>
       <textarea id="inputYesterday" rows="6" cols="70"></textarea>
