--- a/edit-post.html
+++ b/edit-post.html
@@ -47,23 +47,23 @@
                 
         <div class="outside-container">
           <h1>Author ID #921657121102250065</h1>
-          <h1>Edit Post #18</h1>
+          <h1>Edit Post #24</h1>
           <form action="http://127.0.0.1:8000/update" method="post">
             <input
               type="hidden"
               name="message_id"
               id="inputMessageID"
-              value="18"
+              value="24"
             />
             <p>What did you do yesterday?</p>
             <div class="textarea-container">
-              <textarea name="do_yesterday" id="inputYesterday" rows="6">fasdfasdf</textarea>
+              <textarea name="do_yesterday" id="inputYesterday" rows="6">fasdfasdfttttttttttt</textarea>
             </div>
 
             <p>What will you do today?</p>
 
             <div class="textarea-container">
-              <textarea name="do_today" id="inputToday" rows="6">hello</textarea
+              <textarea name="do_today" id="inputToday" rows="6">hellotttttttttttttt</textarea
               >
             </div>
 
