--- a/edit-post.html
+++ b/edit-post.html
@@ -57,13 +57,13 @@
             />
             <p>What did you do yesterday?</p>
             <div class="textarea-container">
-              <textarea name="do_yesterday" id="inputYesterday" rows="6">fasdfasdfttttttttttt</textarea>
+              <textarea name="do_yesterday" id="inputYesterday" rows="6">TTTTTTTTTTTT</textarea>
             </div>
 
             <p>What will you do today?</p>
 
             <div class="textarea-container">
-              <textarea name="do_today" id="inputToday" rows="6">hellotttttttttttttt</textarea
+              <textarea name="do_today" id="inputToday" rows="6">TTTTTTTTTTTTTTTTT</textarea
               >
             </div>
 
